--- a/18/index.html
+++ b/18/index.html
@@ -2,37 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Частые слова</title>
 </head>
 <body>
+
 <form class="main-form">
-    <textarea class="text"></textarea>
-    <button type="submit" class="subm">Отправить</button>
+    <textarea id="text"></textarea>
+    <button id="calc_button" type="submit">Посчитать</button>
 </form>
-<div class="result"></div>
-<script>
-    document.querySelector(`.subm`).addEventListener(`click`, (evt) => {
-        evt.preventDefault();
-        document.querySelector('.result').innerHTML = ``;
 
-        const res = Object.entries(countWords()).sort((a,b) => b[1]-a[1]).slice(0, 3);
-        for (let el in res) {
-            const node = document.createElement(`p`);
-            node.textContent = `Слово ${res[el][0]} встречается ${res[el][1]} раз/раза.`;
-            document.querySelector('.result').append(node);
-        }
-    });
+<div id="result"></div>
 
-    const countWords = () => {
-        const res = {};
-        const wordsList = document.querySelector(`.text`).value
-            .replace(/[.]/g, '').split(/\s/);
-        wordsList.forEach((word) => {
-            res[word] = res.hasOwnProperty(word) ? res[word] += 1 : 1;
-        })
-
-        return res;
-    }
-</script>
+<script src="index.js"></script>
 </body>
 </html>
