--- a/16/index.html
+++ b/16/index.html
@@ -5,13 +5,23 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
-    <title>Кости</title>
+    <title>Game of Dice</title>
 </head>
 
 <body>
-    <button id="play_button">Play!</button>
+<div class="grid">
+    <div class="info">
+        <div class="scores">
+            <div id="user_score"></div>
+            <div id="bot_score"></div>
+        </div>
+        <div class="results" id="results"></div>
+    </div>
 
-    <script src="index.js"></script>
+    <button id="play_button"></button>
+</div>
+
+<script src="index.js"></script>
 </body>
 
 </html>
